css/styles.css
/* ... */
.footer-flex {
  display: flex;
  justify-content: space-around;
  flex-direction: column;
}

.flex-icons {
  display: flex;
  justify-content: space-between;
  display: none;
}

h5 {
  font-size: 20px;
  font-family: "Exo";
  font-weight: bold;
  color: white;
  text-decoration: underline;
}

h6 {
  font-size: 22px;
  font-family: "Exo";
  font-weight: 500;
  color: white;
  display: inline-block;
  margin-right: 10px;
}

.fa-arrow-up {
  font-size: 20px;
  color: #ed1c24;
}

.red2:hover {
  cursor: pointer;
  background-color: white;
}

/* About page start */

.about-body {
  background: #f2f2f2;
}

.about-box-left {
  display: flex;
  max-width: 414px;
  padding: 20px;
}

.about-box-right {
  max-width: 374px;
}

h2 {
  font-family: "exo";
  font-size: 24px;
  display: inline-block;
}

.heading-square {
  height: 24px;
  width: 3px;
  background-color: #ed1c24;
  display: inline-block;
  margin-top: 32px;
  transform: translateY(2px);
  margin-right: 6px;
}

.about-box-left p {
  font-size: 20px;
  color: #0d0d0d;
  margin-bottom: 64px;
}

.contact p,
.contact input {
  font-family: "mulish";
  font-size: 16px;
  border-width: 0px;
  width: 194px;
  background-color: transparent;
  color: #fff;
  margin-bottom: 0px;
}

.contact input {
  font-size: 16px;
}

.form ::placeholder {
  color: #fff;
  opacity: 1;
}

.form {
  width: 100%;
  min-height: 440px;
  background-color: #0d0d0d;
  padding: 32px;
  box-sizing: border-box;
  margin: 32px 0px 0px 0px;
  border-radius: 5px 5px 0px 0px;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

.form p {
  margin-bottom: 10px;
}

.how-can-we-help {
  margin-top: 20px;
  margin-bottom: 0px;
}

.line {
  max-width: 80%;
  height: 2px;
  background-color: #fff;
  margin-top: 12px;
  margin-bottom: 12px;
}

.line2 {
  width: 100%;
  height: 2px;
  background-color: #fff;
  margin-top: 12px;
  margin-bottom: 12px;
}

textarea {
  background-color: transparent;
  border: none;
  color: #fff;
  font-family: "mulish";
  font-size: 18px;
  resize: none;
  height: 28px;
  width: 100%;
}

.contact-info {
  width: 100%;
  min-height: 440px;
  background-color: #2d3962;
  padding: 32px;
  box-sizing: border-box;
  border-radius: 0 0 5px 5px;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  margin-bottom: 32px;
}

.contact-info p {
  display: inline-block;
}

.contact-info p:first-child {
  margin-bottom: 20px;
}

.contact-info p:last-child {
  transform: translateY(-1px);
}

.contact-info img {
  margin-right: 32px;
}

.google-map {
  height: 232px;
  width: 100%;
}

.flex-spacebetween2 {
  display: flex;
  justify-content: space-between;
}

.flex-spacebetween2 img {
  transform: translateY(5px);
}

.form button {
  margin-top: 8px;
}
/* ... */

